# cv_evaluator

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.prod.yml  orchestrator.py  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci-cd.yml  deploy.yml  docker-build.yml  lint.yml  test.yml
agents/: __init__.py  base_agent.py  experience_agent.py  quality_control_agent.py  scoring_agent.py  skills_education_agent.py  summary_validation_agent.py  table_generator_agent.py
models/: __init__.py  schemas.py
prompts/: __init__.py  templates.py
tests/: test_basic.py
utils/: .env  __init__.py  cache.py  chunking.py  pdf_parser.py
